@@ -61,6 +61,7 @@ Misc:
  - GBA RR: Add support for resets in movies
  - GBA Input: Consolidate GBA_KEY_NONE and GBA_NO_MAPPING
  - Debugger: Convert breakpoints and watchpoints from linked-lists to vectors
+ - Qt: Added button for breaking into the GDB debugger
 
 0.3.2: (2015-12-16)
 Bugfixes:
